# chatagent-ws

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_pygame.py
chatagent_ws/: AppConfig.py  LoggingUtil.py  app_config.py  language_util.py  logging_util.py  main.py  session_manager.py  spacy_test.py  stt_client.py  ws_speech.py  ws_text.py
src/chatagent_ws/: AppConfig.py  LoggingUtil.py
tests/: mini_server.py  test-index.html  test_main.py  test_stt_stream.py  test_ws.py  ws_client_test.py
