[project]
name = "chatagent-ws"
version = "0.1.0"
description = ""
authors = [
    {name = "ggan",email = "yiwugan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiohttp (>=3.11.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
gunicorn = "^23.0.0"

