[project]
name = "chatagent-ws"
version = "0.1.0"
description = ""
authors = [
    {name = "ggan",email = "yiwugan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aiortc (>=1.10.1,<2.0.0)",
    "google-cloud-texttospeech (>=2.25.1,<3.0.0)",
    "lingua-language-detector (>=2.1.0,<3.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
gunicorn = "^23.0.0"
websockets = "^15.0.1"
httpx = "^0.28.1"
requests = "^2.32.3"

